<resources>
    <string name="app_name">Restify</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <!-- Restify Strings -->
    <string name="SHOW">SHOW</string>
    <string name="HIDE">HIDE</string>

    <string-array name="universities">

        <item>--------------- Choose an institution ---------------</item>
        <item>Towson University</item>
        <item>University of Maryland, Baltimore County</item>
        <item>University of Maryland, College Park</item>

    </string-array>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="university_email">University email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="log_inTextView">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="show">SHOW</string>
    <string name="select_your_university">Select your University</string>
    <string name="go">go</string>
    <string name="university_email2">University email</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">reset</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="continue1">continue</string>
    <string name="what_is_your_email">What is your email?</string>
    <string name="university_email3">University email</string>
    <string name="continue2">continue</string>
    <string name="create_a_password">Create a password</string>
    <string name="password1">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="at_least_8_characters">At least 8 characters.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in1">LOG IN</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="screen_1">Screen 1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav">Nav</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_home">Home</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main_navigation">MainNavigation</string>
    <string name="title_activity_main_nav">MainNav</string>
    <string name="homeText">Home Page</string>
    <string name="my_account_page">My Account Page</string>
    <string name="settings_page">Settings Page</string>
    <string name="title_activity_tester">tester</string>
    <string name="title_activity_frjbfwjkfbekjwfweb">frjbfwjkfbekjwfweb</string>
    <string name="my_requests">My Requests</string>
    <string name="all_requests">All Requests</string>
    <string name="events">Events</string>
    <string name="title_activity_home_three_tabs">HomeThreeTabs</string>
    <string name="openit">Open</string>
    <string name="closeit">Close</string>
    <string name="events_page">Events Page</string>
    <string name="all_requestss">All Requests</string>
    <string name="settings">Settings</string>
    <string name="my_account">My Account</string>
    <string name="home">Home</string>
    <string name="choose">--------------- Choose an institution ---------------</string>
    <string name="shop">Shop</string>
    <string name="messages">Messages</string>
    <string name="title_activity_deleteeeeeeer">deleteeeeeeer</string>
    <string name="log_out">Log Out</string>
    <string name="my_accountt">My Account Page</string>
    <string name="resend_verification">Resend Verification</string>
    <string name="send">send</string>

</resources>
