<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hamid.restify.ResetPassword"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/resetEmail"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/university_email2"
        android:inputType="textEmailAddress"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/resetBtn"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/resetText"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/resetText" />

    <TextView
        android:id="@+id/resetText"
        android:layout_width="256dp"
        android:layout_height="45dp"
        android:text="@string/reset_password"
        android:textSize="35sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/resetBtn"
        android:layout_marginStart="25dp"
        android:layout_marginTop="128dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="127dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="25dp" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_marginEnd="61dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="163dp"
        android:layout_marginRight="61dp" />

</android.support.constraint.ConstraintLayout>
